--- a/website-theme/sections/hero-video.html
+++ b/website-theme/sections/hero-video.html
@@ -5,20 +5,23 @@
   screenshotPath: ../images/section-previews/cards.png
   description: "Hero Image with a video in lightbox."
 -->
-
+<section class='hero' id='hero'>
 {% dnd_section "hero" background_image={
   "backgroundPosition": "MIDDLE_CENTER",
   "backgroundSize": "cover",
   "imageUrl": context.background_image or get_asset_url('Starnight/images/theme-assets/hero.jpg')
-}, padding={ "default" :{"top": 65,
+}, 
+padding={ "default" :{
+"top": 65,
 "right": 0,
 "bottom": 65,
-"left": 0}}%}
-    {% dnd_column %}
+"left": 0
+}} %}
+    {% dnd_column "container" %}
         {% dnd_row %}
             {% dnd_module
         path="@hubspot/rich_text",
-        html={{ context.column_one_content or "<section class='hero' id='hero'>
+        html={{ context.column_one_content or "
         <div class='container'>
           
           <div class='row'>
@@ -27,24 +30,21 @@
               <p class='animated fadeInUpDelay'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
             </div>
           </div>
-          <div class='row'>
-            <div class='col-md-2 col-md-offset-5 text-center'>
-              <a href='http://player.vimeo.com/video/87701971?title=0&amp;byline=0&amp;portrait=0&amp;color=1883ad&amp;autoplay=1' class='hero-play-btn various fancybox.iframe'>Play Button</a>
-            </div>
-          </div>
-          <div class='row'>
-            <div class='col-md-6 col-md-offset-3 text-center'>
-              <a href='' class='primary-button'>Get Started</a>
-            </div>
-          </div>
+        
         </div>
-      </section>" }}
+   " }}
       %}
       {% end_dnd_module %}
       {% end_dnd_row %}
       {% dnd_row %}
-{% dnd_module path="/Starnight/modules/CTA Button" %}
+        {% dnd_module path="../modules/video popup.module" %}
+        {% end_dnd_module %}
+      {% end_dnd_row %}
+      {% dnd_row %}
+{% dnd_module path="@hubspot/cta" guid="92ef17dd-def0-4779-9ccd-cace2ad377c9" %}
+
 {% end_dnd_module %}
         {% end_dnd_row %}
     {% end_dnd_column %}
 {% end_dnd_section %}
+</section>
